--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2021"
 
 [dependencies]
 ark-bn254 = "0.5.0"
+ark-ec = "0.5.0"
 ark-ff = "0.5.0"
+ark-poly = "0.5.0"
 regex = "1.11.1"
+rand = "0.8.5"
+ark-serialize = "0.5.0"
