--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,19 @@
 [package]
-name = "mini-groth16"
+name = "mini_groth16"
 version = "0.1.0"
 edition = "2021"
+
+[[bin]]
+name = "setup"
+path = "./src/trusted_setup.rs"
+
+[[bin]]
+name = "prover"
+path = "./src/prover/prover.rs"
+
+[[bin]]
+name="verifier"
+path="./src/verifier.rs"
 
 [dependencies]
 ark-bn254 = "0.5.0"
@@ -12,3 +24,5 @@ regex = "1.11.1"
 rand = "0.8.5"
 ark-serialize = "0.5.0"
 serde_json = "1.0.140"
+ark-std = "0.5.0"
+base64 = "0.22.1"
